# test-crate-hello-world

./: Cargo.toml
src/: lib.rs
