[package]
name = "test_crate_hello_world"
version = "0.1.0"
edition = "2018"
authors = ["hooneun"]

description = "A Simple Hello World Crate"
repository = "https://github.com/hooneun/test-crate-hello-world"
keywords = ["hello", "world"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
